# gix-cli

./: .gitignore  ARCHITECTURE.md  README.md  README.zh.md  package.json  tsconfig.json
.github/instructions/: copilot-instructions.md
.github/workflows/: auto-tag-rust.yml  release-rust.yml  release.yml  rust-ci.yml
_docs/: blog_post_rust_rewrite.md
_docs/space/: 20251223_rebase_feature.md
rust/: Cargo.toml  LICENSE  README.md  package.json
rust/scripts/: install.js
rust/src/: main.rs
rust/src/commands/: doctor.rs  merge.rs  mod.rs  rebase.rs  reset.rs  squash.rs
src/commands/: doctor.ts  merge.ts  reset.ts
typescript/: README.md  package.json  pnpm-lock.yaml  tsup.config.ts
typescript/src/commands/: merge.ts  squash.ts
